--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,82 +7,71 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- Top header -->
+    <!-- We create a div with class Name container -->
+    <div class="container">
+        <img src="images/Space-4k-Wallpaper 1.png" alt ="wallpaper">      <!-- background image of saturn -->
     <header>
-        <div class="logo">
-        <img src="images/Frame 2.png" alt="Logo">
+        <div class="logo">                          
+        <img src="images/Frame 2.png" alt="Logo">                 <!--logo of saturn Edge-->
         </div>
-        <ul class="nav-links">
+        <ul class="nav-links">                                     <!--Navigation links in header-->
         <li><a href="#">Explore</a></li>
         <li><a href="#">Moons</a></li>
         <li><a href="#">Concept</a></li>
         <li><a href="#">Article</a></li>
         <li><a href="#">About</a></li>
         </ul>
-        <button class="btn">Subscribe</button>
+        <button class="btn">Subscribe</button>                     <!--Subscribe button-->
     </header>
+    <!-- End of header -->
 
-<!-- Explore the mystries and gateway -->
-<div class="container-1">
-    <h1> Explore the Mysteries</h1>
-    <h1>of SaturnEdge</h1>
-    <p class="gate">Your Gateway to the Wonders of Saturn</p>
-</div>
+    <div class="saturn"> Explore the Mysteries</div>
+        <div class="saturn1">of SaturnEdge</div>
+        <div class="gate">Your Gateway to the Wonders of Saturn</div>
+        <!-- explore and watch now buttons -->
+        <div class="content1">Explore Now</div>
+        <div class="icon1"> <img src="images/Rectangle 3 (1).png" alt="Icon 1"> </div>
+        <div class="content2">Watch Trailer</div>
+        <div class="icon2"> <img src="images/Rectangle 3.png" alt="Icon 2"> </div>
+       </div> 
 
-<!-- Explore and watch buttons  -->
-<div class="icon-container">
-    <div class="icon-wrapper">
-    <img class="icon" src="images/Rectangle 3 (1).png" alt="Icon 1">
-    <div class="content">Explore Now</div>
-    </div>
-    <div class="icon-wrapper">
-    <img class="icon" src="images/Rectangle 3.png" alt="Icon 2">
-    <div class="content">Watch Trailer</div>
-    </div>
-    </div>
-<img class="saturn" src="images/Saturn 827 1.png" alt="Saturn Image">
-    <!-- explore saturn moons text -->
-        <ul class="explore-container">
-            <li>EXPLORE SATURN MOONS CLOSELY</li>
-            <li>EXPLORE SATURN MOONS CLOSELY</li>
-            <li>EXPLORE SATURN MOONS CLOSELY</li>
-        </ul>
+       <!-- Explore moons closely -->
+       <ul class="explore-container">
+        <li>EXPLORE SATURN MOONS CLOSELY</li>
+        <li>EXPLORE SATURN MOONS CLOSELY</li>
+        <li>EXPLORE SATURN MOONS CLOSELY</li>
+    </ul>
 
-        <!-- About Saturn Edge  -->
-        <p class="center-heading">About <span class="blue">Saturn Edge</span></p>
-        <p class="gate">Your Gateway to the Wonders of Saturn</p>
+    <!-- About Saturn Edge -->
+    <div class="about">About <span class="blue">Saturn Edge</span></div>
+    <p class="about-saturn">Enter the enchanting realm of Saturn, a celestial tableau of countless moons and brilliant rings. Here, different paths merge to create a unique symphony of cosmic wonder. Each Saturn moon is a unique gem that reflects the diversity of our products. Join us on this cosmic journey where three different paths intersect in terms of offering healthy food, tours and travel experiences and entertainment. It takes the form of a celestial body.</p>
 
-<!-- Saturn edge services  -->
-        <div class="container">
-            <pre class="text">Saturn Edge
+    <!-- Saturn edge services  -->
+    <div class="service">
+        <pre class="text">Saturn Edge
 <span class="blue">services</span></pre>
-
 <!-- image for saturn edge -->
-            <img class="image" src="images/Ellipse 5.png" alt="Right-aligned image">
-        </div>
+        <img class="service-image" src="images/Ellipse 5.png" alt="Right-aligned image">
+    </div>
 
-        <!-- lets choose moon in mind text -->
-        <p class="center-heading">Let’s choose a <span class="blue">moon</span>
-            in your <span class="blue">mind</span></p>
-
-<!-- The boxes -->
+     <!-- Lets choose moon in mind text -->
+     <div class="choose-moon">Let’s choose a <span class="blue">moon</span>
+        in your <span class="blue">mind</span></div>
+        <!-- The boxes for Different types of Moons -->
 <div class="Boxes">
-    <div class="box"></div>
-    <div class="box"></div>
-</div>
-<div class="Boxes">
-    <div class="box"></div>
-    <div class="box"></div>
+    <div class="box"><img class="moon" src="images/moon1.png" alt="Moon 1"><p>Moon <span class="blue">#1</span></p></div>
+    <div class="box"><img class="moon" src="images/moon2.png" alt="Moon 1"><p>Moon <span class="blue">#2</span></p></div>
+    <div class="box"><img class="moon" src="images/moon3.png" alt="Moon 1"><p>Moon <span class="blue">#3</span></p></div>
+    <div class="box"><img class="upcoming" src="images/moon4.png" alt="Moon 1"></div>
 </div>
 
 <!-- See all fantasy moon portal -->
-<p class="center-heading">See all <span class="blue">fantasy moon</span> portal</p>
-<!-- images of moon -->
-<div class="moon">
-    <img class="moon-image" src="images/Ellipse 6 (1).png" alt="Moon Image">
-    <img class="moon-image1" src="images/Ellipse 6.png" alt="Moon Image">
-    <img class="moon-image" src="images/Ellipse 7.png" alt="Moon Image">
+<div class="fantasy-moon">See all <span class="blue">fantasy moon</span> portal</div>
+<!-- Fantasy moons -->
+<div class="slide-moons">
+    <img src="images/Ellipse 6 (1).png" alt="image">
+    <img src="images/Ellipse 6.png" alt="image">
+    <img src="images/Ellipse 7.png" alt="image">
 </div>
 </body>
 </html>
