--- a/index.html
+++ b/index.html
@@ -73,5 +73,25 @@
     <img src="images/Ellipse 6.png" alt="image">
     <img src="images/Ellipse 7.png" alt="image">
 </div>
+
+<footer>
+<pre class="bottom-text"><img class="bottom-logo" src="images/Frame 2.png" alt="logo">
+    Stay up-to-date with latest
+    developments in space
+    exploration</pre>
+
+<!-- General part in footer -->
+<ul class="general">   <span>General </span>                        
+    <li><a href="#">Moons</a></li>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    </ul>
+
+    <!-- FAQ Section -->
+    <ul class="faq">   <span>FAQS </span>                        
+        <li><a href="#">Solution</a></li>
+        <li><a href="#">Chat</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
