--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <img src="images/Frame 2.png" alt="Logo">                 <!--logo of saturn Edge-->
         </div>
         <ul class="nav-links">                                     <!--Navigation links in header-->
-        <li><a href="#">Explore</a></li>
-        <li><a href="#">Moons</a></li>
+        <li><a href="#explore">Explore</a></li>
+        <li><a href="#moons">Moons</a></li>
         <li><a href="#">Concept</a></li>
         <li><a href="#">Article</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#about">About</a></li>
         </ul>
         <button class="btn">Subscribe</button>                     <!--Subscribe button-->
     </header>
@@ -36,14 +36,14 @@
        </div> 
 
        <!-- Explore moons closely -->
-       <ul class="explore-container">
+       <ul class="explore-container" id="explore">
         <li>EXPLORE SATURN MOONS CLOSELY</li>
         <li>EXPLORE SATURN MOONS CLOSELY</li>
         <li>EXPLORE SATURN MOONS CLOSELY</li>
     </ul>
 
     <!-- About Saturn Edge -->
-    <div class="about">About <span class="blue">Saturn Edge</span></div>
+    <div class="about" id="about">About <span class="blue">Saturn Edge</span></div>
     <p class="about-saturn">Enter the enchanting realm of Saturn, a celestial tableau of countless moons and brilliant rings. Here, different paths merge to create a unique symphony of cosmic wonder. Each Saturn moon is a unique gem that reflects the diversity of our products. Join us on this cosmic journey where three different paths intersect in terms of offering healthy food, tours and travel experiences and entertainment. It takes the form of a celestial body.</p>
 
     <!-- Saturn edge services  -->
@@ -55,13 +55,13 @@
     </div>
 
      <!-- Lets choose moon in mind text -->
-     <div class="choose-moon">Let’s choose a <span class="blue">moon</span>
+     <div class="choose-moon" id="moons">Let’s choose a <span class="blue">moon</span>
         in your <span class="blue">mind</span></div>
         <!-- The boxes for Different types of Moons -->
 <div class="Boxes">
-    <div class="box"><img class="moon" src="images/moon1.png" alt="Moon 1"><p>Moon <span class="blue">#1</span></p></div>
-    <div class="box"><img class="moon" src="images/moon2.png" alt="Moon 1"><p>Moon <span class="blue">#2</span></p></div>
-    <div class="box"><img class="moon" src="images/moon3.png" alt="Moon 1"><p>Moon <span class="blue">#3</span></p></div>
+    <div class="box"><img class="moon" src="images/moon1.png" alt="Moon 1"><p>Moon <span class="blue">#1</span></p><p class="below-moon">Wayfindr</p></div>
+    <div class="box"><img class="moon" src="images/moon2.png" alt="Moon 1"><p>Moon <span class="blue">#2</span></p><p class="below-moon">HealthBox</p></div>
+    <div class="box"><img class="moon" src="images/moon3.png" alt="Moon 1"><p>Moon <span class="blue">#3</span></p><p class="below-moon">E-Mela</p></div>
     <div class="box"><img class="upcoming" src="images/moon4.png" alt="Moon 1"></div>
 </div>
 
