--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="nav-links">                                     <!--Navigation links in header-->
         <li><a href="#explore">Explore</a></li>
         <li><a href="#moons">Moons</a></li>
-        <li><a href="#">Concept</a></li>
+        <li><a href="#concept">Concept</a></li>
         <li><a href="#">Article</a></li>
         <li><a href="#about">About</a></li>
         </ul>
@@ -47,9 +47,15 @@
     <p class="about-saturn">Enter the enchanting realm of Saturn, a celestial tableau of countless moons and brilliant rings. Here, different paths merge to create a unique symphony of cosmic wonder. Each Saturn moon is a unique gem that reflects the diversity of our products. Join us on this cosmic journey where three different paths intersect in terms of offering healthy food, tours and travel experiences and entertainment. It takes the form of a celestial body.</p>
 
     <!-- Saturn edge services  -->
-    <div class="service">
-        <pre class="text">Saturn Edge
-<span class="blue">services</span></pre>
+    <div class="service" id="concept">
+        <div class="text">Saturn Edge
+<div class="blue">services</div>
+<div class="imagination"> " Where Imagination Meets Innovation."</div>
+<p>
+    Enter the realm of endless possibilities with SaturnEdge Solutions. We are not just a company; We are architects of change, pioneers of superior experiences and creators of limitless innovation. </p>
+    <p class="join-us">Join us in shaping the future through creativity and innovation.</p>
+   <p class="solutions"> SaturnEdge Solutions - "Ignite Creativity, Embrace Innovation."</p>
+</div>
 <!-- image for saturn edge -->
         <img class="service-image" src="images/Ellipse 5.png" alt="Right-aligned image">
     </div>
