Update index.html - add video at wayfinder

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saturn Edge</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <!-- We create a div with class Name container -->
@@ -51,8 +52,7 @@
         <div class="text">Saturn Edge
 <div class="blue">services</div>
 <div class="imagination"> " Where Imagination Meets Innovation."</div>
-<p>
-    Enter the realm of endless possibilities with SaturnEdge Solutions. We are not just a company; We are architects of change, pioneers of superior experiences and creators of limitless innovation. </p>
+<p>Enter the realm of endless possibilities with SaturnEdge Solutions. We are not just a company; We are architects of change, pioneers of superior experiences and creators of limitless innovation. </p>
     <p class="join-us">Join us in shaping the future through creativity and innovation.</p>
    <p class="solutions"> SaturnEdge Solutions - "Ignite Creativity, Embrace Innovation."</p>
 </div>
@@ -65,7 +65,9 @@
         in your <span class="blue">mind</span></div>
         <!-- The boxes for Different types of Moons -->
 <div class="Boxes">
-    <div class="box"><img class="moon" src="images/moon1.png" alt="Moon 1"><p>Moon <span class="blue">#1</span></p><p class="below-moon">Wayfindr</p></div>
+    <div class="box"><img class="moon" src="images/moon1.png" alt="Moon 1"><p>Moon <span class="blue">#1</span></p><p class="below-moon">Wayfindr</p>
+        <a href="video.html"> 
+  <img  class="logo" src="images/wayfindr logo white.png" alt="Logo"></a> </div>
     <div class="box"><img class="moon" src="images/moon2.png" alt="Moon 1"><p>Moon <span class="blue">#2</span></p><p class="below-moon">HealthBox</p></div>
     <div class="box"><img class="moon" src="images/moon3.png" alt="Moon 1"><p>Moon <span class="blue">#3</span></p><p class="below-moon">E-Mela</p></div>
     <div class="box"><img class="upcoming" src="images/moon4.png" alt="Moon 1"></div>
@@ -76,7 +78,7 @@
 <!-- Fantasy moons -->
 <div class="slide-moons">
     <img src="images/Ellipse 6 (1).png" alt="image">
-    <img src="images/Ellipse 6.png" alt="image">
+    <img class="center-moon" src="images/Ellipse 6.png" alt="image">
     <img src="images/Ellipse 7.png" alt="image">
 </div>
 
@@ -99,5 +101,6 @@
         <li><a href="#">Chat</a></li>
         </ul>
     </footer>
+    <div class="mail">Contact us : helpsaturnedge@gmail.com</div>
 </body>
 </html>
